<resources>
    <string name="app_name">Bomb Surge</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_board">Board</string>
    <string name="title_activity_game_view">GameView</string>
    <string name="title_activity_game_session">GameSession</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_results">Results</string>
    <string name="banner_ad_unit_id">ca-app-pub-3579886166397664/4535375231</string>
    <string name="banner_ad_unit_id1">ca-app-pub-3579886166397664/7488841638</string>
    <string name="title_activity_help">Help</string>
    <string name="help_intro">Need some help with the game. Well here is a little information that covers the ins and outs of BombSurge.ENJOY!
    </string>
    <string name="combo_info">When you successfully hit a certain amount of bombs your combo will build and your points multiply by that combo amount. Once you hit three your combo surges.</string>
    <string name="gun_info">Weapon Effect: When the gun is het your weapon type "MAY" change. (Special weapon effects are not included at the moment)</string>
    <string name="wizard_info">Weapon Effect: When the wizard hat is hit. Your bullet amount "MAY" multiply.</string>
    <string name="nuke_info">THE NUKE!! A special little item that clears the board. Very Strong. Very Helpful. WARNING:  If nuke hits bottom it will take away 5 lives.</string>
    <string name="mini_info">A diving bomb that is worth 1 but takes away two. It GOES FAST!!</string>
    <string name="bomb_info">The main source of points in game. Worth 1 point. Caution! If you try to hit the most recent dropped it is in immunity mode.</string>
    <string name="tnt_info">A bomb worth two points but equally takes away two points.</string>
    <string name="bolt_info">A Surge Item: When the bolt is hit you trigger a surge. This surge causes everything to speed up. Except for time. Can be difficult.</string>
    <string name="snowman_info">A Surge Item: When the snow man head is hit you trigger a surge. This surge causes everything to slow down. Except for time. Use it wisely.</string>
    <string name="clock_info">IMPORTANT: One of the most important bombs in game. You have to constantly hit the bomb clocks to gain 2 more seconds on your clock.</string>
    <string name="signed_in_fmt">Sign in Success</string>
    <string name="signed_out">Sign out Success</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="PB_DISPLAY">Personal Best: </string>
    <string name="RESULTS_DISPLAY">Results: </string>
</resources>
